crates/slate/tests/snapshots/switch_default.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn classify(arg0: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    let mut out: i32 = 0;
    x = arg0;
    let _v0: i32 = 0;
    out = _v0;
    {
        let _v1: i32 = x;
        {
            let __switch_value0 = _v1;
            let mut __switch_case0: i32 = match __switch_value0 { 1 => 0, 2 => 1, _ => 2 };
            '__switch0: loop {
                match __switch_case0 {
                    0 => {
                        let _v2: i32 = 11;
                        out = _v2;
                        break '__switch0;
                    }
                    1 => {
                        let _v3: i32 = 22;
                        out = _v3;
                        break '__switch0;
                    }
                    2 => {
                        let _v4: i32 = 99;
                        out = _v4;
                        break '__switch0;
                    }
                    _ => {
                        break '__switch0;
                    }
                }
            }
        }
    }
    let _v5: i32 = out;
    __retval = _v5;
    let _v6: i32 = __retval;
    return _v6;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 1;
    let _v3: i32 = classify(_v2);
    let _v4: i32 = 2;
    let _v5: i32 = classify(_v4);
    let _v6: i32 = 7;
    let _v7: i32 = classify(_v6);
    let _v8: i32 = unsafe { printf(_v1 as *const i8, _v3, _v5, _v7) };
    let _v9: i32 = 0;
    __retval = _v9;
    let _v10: i32 = __retval;
    std::process::exit(_v10 as i32);
}
