crates/slate/tests/snapshots/target_stack_builtin_ops.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn cache_prefetch_probe(arg0: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    let mut bytes: aligned::Aligned<aligned::A16, [i8; 16]> = aligned::Aligned([0; 16]);
    x = arg0;
    *bytes = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
    let _v0: i32 = x;
    let _v1: i8 = _v0 as i8;
    let _v2: i64 = 0;
    bytes[(_v2 as usize)] = _v1;
    let _v3: *mut i8 = bytes.as_mut_ptr() as *mut i8;
    let _v4: *mut core::ffi::c_void = _v3 as *mut core::ffi::c_void;
    let _v5: *mut i8 = bytes.as_mut_ptr() as *mut i8;
    let _v6: u64 = 16;
    let _v7: *mut i8 = unsafe { _v5.add(16) };
    let _v8: *mut core::ffi::c_void = _v7 as *mut core::ffi::c_void;
    todo!("instruction without lowering");
    let _v9: *mut i8 = bytes.as_mut_ptr() as *mut i8;
    let _v10: i32 = 1;
    let _v11: *mut i8 = unsafe { _v9.add(1) };
    let _v12: *mut core::ffi::c_void = _v11 as *mut core::ffi::c_void;
    let _v13: i64 = 0;
    let _v14: i8 = bytes[(_v13 as usize)];
    let _v15: i32 = _v14 as i32;
    let _v16: i32 = 1;
    let _v17: i32 = _v15 + _v16;
    __retval = _v17;
    let _v18: i32 = __retval;
    return _v18;
}

fn frame_probe() -> i32 {
    let mut __retval: i32 = 0;
    let mut frame: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v0: u32 = 0;
    let _v1: *mut u8 = 1usize as *mut u8;
    let _v2: *mut core::ffi::c_void = _v1 as *mut core::ffi::c_void;
    frame = _v2;
    let _v3: *mut core::ffi::c_void = frame;
    let _v4: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v5: bool = _v3 != _v4;
    let _v6: i32 = _v5 as i32;
    __retval = _v6;
    let _v7: i32 = __retval;
    return _v7;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut input: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 7;
    unsafe { std::ptr::write_volatile(std::ptr::addr_of_mut!(input), _v1) };
    let _v2: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v3: i32 = unsafe { std::ptr::read_volatile(std::ptr::addr_of!(input)) };
    let _v4: i32 = cache_prefetch_probe(_v3);
    let _v5: i32 = frame_probe();
    let _v6: i32 = unsafe { printf(_v2 as *const i8, _v4, _v5) };
    let _v7: i32 = 0;
    __retval = _v7;
    let _v8: i32 = __retval;
    std::process::exit(_v8 as i32);
}
