crates/slate/tests/snapshots/ternary_function_pointer_select.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

extern "C" fn add(arg5: i32, arg6: i32) -> i32 {
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut __retval: i32 = 0;
    a = arg5;
    b = arg6;
    let _v0: i32 = a;
    let _v1: i32 = b;
    let _v2: i32 = _v0 + _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

extern "C" fn sub(arg3: i32, arg4: i32) -> i32 {
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut __retval: i32 = 0;
    a = arg3;
    b = arg4;
    let _v0: i32 = a;
    let _v1: i32 = b;
    let _v2: i32 = _v0 - _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn apply(arg0: i32, arg1: i32, arg2: i32) -> i32 {
    let mut useAdd: i32 = 0;
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut __retval: i32 = 0;
    useAdd = arg0;
    a = arg1;
    b = arg2;
    let _v0: i32 = useAdd;
    let _v1: bool = _v0 != 0;
    let _v2: Option<unsafe extern "C" fn(i32, i32) -> i32> = if _v1 { Some(add) } else { Some(sub) };
    let _v3: i32 = a;
    let _v4: i32 = b;
    let _v5: i32 = unsafe { _v2.unwrap()(_v3, _v4) };
    __retval = _v5;
    let _v6: i32 = __retval;
    return _v6;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut useAdd: i32 = 0;
    let mut op: Option<unsafe extern "C" fn(i32, i32) -> i32> = None;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 1;
    useAdd = _v1;
    let _v2: i32 = useAdd;
    let _v3: bool = _v2 != 0;
    let _v4: Option<unsafe extern "C" fn(i32, i32) -> i32> = if _v3 { Some(add) } else { Some(sub) };
    op = _v4;
    let _v5: *mut i8 = b"%d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v6: Option<unsafe extern "C" fn(i32, i32) -> i32> = op;
    let _v7: i32 = 10;
    let _v8: i32 = 3;
    let _v9: i32 = unsafe { _v6.unwrap()(_v7, _v8) };
    let _v10: i32 = 0;
    let _v11: i32 = 10;
    let _v12: i32 = 3;
    let _v13: i32 = apply(_v10, _v11, _v12);
    let _v14: i32 = 1;
    let _v15: i32 = 4;
    let _v16: i32 = 4;
    let _v17: i32 = apply(_v14, _v15, _v16);
    let _v18: i32 = useAdd;
    let _v19: bool = _v18 != 0;
    let _v20: Option<unsafe extern "C" fn(i32, i32) -> i32> = if _v19 { Some(sub) } else { Some(add) };
    let _v21: i32 = 9;
    let _v22: i32 = 2;
    let _v23: i32 = unsafe { _v20.unwrap()(_v21, _v22) };
    let _v24: i32 = unsafe { printf(_v5 as *const i8, _v9, _v13, _v17, _v23) };
    let _v25: i32 = 0;
    __retval = _v25;
    let _v26: i32 = __retval;
    std::process::exit(_v26 as i32);
}
