crates/slate/tests/snapshots/timespec_get.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn timespec_get(_0: *mut libc::timespec, _1: i32) -> i32;
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut value: libc::timespec = libc::timespec { tv_sec: 0, tv_nsec: 0 };
    let mut result: i32 = 0;
    let mut nanoseconds_in_range: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    value = libc::timespec { tv_sec: 0, tv_nsec: 0 };
    let _v1: i32 = 1;
    let _v2: i32 = unsafe { timespec_get(std::ptr::addr_of_mut!(value) as *mut libc::timespec, _v1 as i32) };
    result = _v2;
    let _v3: i64 = value.tv_nsec;
    let _v4: i64 = 0;
    let _v5: bool = _v3 >= _v4;
    let _v6: bool = if _v5 {
        let _v7: i64 = value.tv_nsec;
        let _v8: i64 = 1000000000;
        let _v9: bool = _v7 < _v8;
        _v9
    } else {
        let _v10: bool = false;
        _v10
    };
    let _v11: i32 = _v6 as i32;
    nanoseconds_in_range = _v11;
    let _v12: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v13: i32 = result;
    let _v14: i32 = 1;
    let _v15: bool = _v13 == _v14;
    let _v16: i32 = _v15 as i32;
    let _v17: i32 = nanoseconds_in_range;
    let _v18: i32 = unsafe { printf(_v12 as *const i8, _v16, _v17) };
    let _v19: i32 = 0;
    __retval = _v19;
    let _v20: i32 = __retval;
    std::process::exit(_v20 as i32);
}
