crates/slate/tests/snapshots/union_init.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
union Value {
    i: i32,
    f: f32,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut v: Value = Value { i: 0 };
    let _v0: i32 = 0;
    __retval = _v0;
    v = Value { i: 258 };
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = unsafe { v.i };
    let _v3: i32 = unsafe { printf(_v1 as *const i8, _v2) };
    let _v4: f32 = 1.5;
    unsafe {
        v.f = _v4;
    }
    let _v5: *mut i8 = b"%.1f\n\0".as_ptr() as *mut i8;
    let _v6: f32 = unsafe { v.f };
    let _v7: f64 = _v6 as f64;
    let _v8: i32 = unsafe { printf(_v5 as *const i8, _v7) };
    let _v9: i32 = 0;
    __retval = _v9;
    let _v10: i32 = __retval;
    std::process::exit(_v10 as i32);
}
