crates/slate/tests/snapshots/unused_params.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

extern "C" fn address_taken(arg7: i32, arg8: i32) -> i32 {
    let mut a: i32 = 0;
    let mut unused: i32 = 0;
    let mut __retval: i32 = 0;
    a = arg7;
    unused = arg8;
    let _v0: i32 = a;
    let _v1: i32 = 4;
    let _v2: i32 = _v0 + _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn add(arg5: i32, arg6: i32) -> i32 {
    let mut a: i32 = 0;
    let mut unused: i32 = 0;
    let mut __retval: i32 = 0;
    a = arg5;
    unused = arg6;
    let _v0: i32 = a;
    let _v1: i32 = 1;
    let _v2: i32 = _v0 + _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn get_used(arg3: i32, arg4: i32) -> i32 {
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut __retval: i32 = 0;
    a = arg3;
    b = arg4;
    let _v0: i32 = a;
    let _v1: i32 = b;
    let _v2: i32 = _v0 + _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn remove_two(arg0: i32, arg1: i32, arg2: i32) -> i32 {
    let mut a: i32 = 0;
    let mut unused_a: i32 = 0;
    let mut unused_b: i32 = 0;
    let mut __retval: i32 = 0;
    a = arg0;
    unused_a = arg1;
    unused_b = arg2;
    let _v0: i32 = a;
    let _v1: i32 = 2;
    let _v2: i32 = _v0 + _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut indirect: Option<unsafe extern "C" fn(i32, i32) -> i32> = None;
    let _v0: i32 = 0;
    __retval = _v0;
    indirect = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(i32, i32) -> i32>>(address_taken as *const ()) };
    let _v1: *mut i8 = b"%d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 5;
    let _v3: i32 = 10;
    let _v4: i32 = add(_v2, _v3);
    let _v5: i32 = 1;
    let _v6: i32 = 2;
    let _v7: i32 = get_used(_v5, _v6);
    let _v8: i32 = 3;
    let _v9: i32 = 4;
    let _v10: i32 = 5;
    let _v11: i32 = remove_two(_v8, _v9, _v10);
    let _v12: Option<unsafe extern "C" fn(i32, i32) -> i32> = indirect;
    let _v13: i32 = 8;
    let _v14: i32 = 9;
    let _v15: i32 = unsafe { _v12.unwrap()(_v13, _v14) };
    let _v16: i32 = unsafe { printf(_v1 as *const i8, _v4, _v7, _v11, _v15) };
    let _v17: i32 = 0;
    __retval = _v17;
    let _v18: i32 = __retval;
    std::process::exit(_v18 as i32);
}
