crates/slate/tests/snapshots/vector_extension_ops.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut a: aligned::Aligned<aligned::A16, [i32; 4]> = aligned::Aligned([0; 4]);
    let mut b: aligned::Aligned<aligned::A16, [i32; 4]> = aligned::Aligned([0; 4]);
    let mut c: aligned::Aligned<aligned::A16, [i32; 4]> = aligned::Aligned([0; 4]);
    let mut d: aligned::Aligned<aligned::A16, [i32; 4]> = aligned::Aligned([0; 4]);
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: [i32; 4] = [1, 2, 3, 4];
    *a = _v1;
    let _v2: [i32; 4] = [5, 6, 7, 8];
    *b = _v2;
    let _v3: [i32; 4] = *a;
    let _v4: [i32; 4] = *b;
    let _v5: [i32; 4] = [_v3[0usize] + _v4[0usize], _v3[1usize] + _v4[1usize], _v3[2usize] + _v4[2usize], _v3[3usize] + _v4[3usize]];
    *c = _v5;
    let _v6: i32 = 20;
    let _v7: i32 = 1;
    let _v8: [i32; 4] = *c;
    let _v9: [i32; 4] = [_v8[0usize], _v6, _v8[2usize], _v8[3usize]];
    *c = _v9;
    let _v10: [i32; 4] = *c;
    let _v11: [i32; 4] = *c;
    let _v12: [i32; 4] = [_v10[3usize], _v10[2usize], _v10[1usize], _v10[0usize]];
    *d = _v12;
    let _v13: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v14: [i32; 4] = *c;
    let _v15: i32 = 0;
    let _v16: i32 = _v14[(_v15 as usize)];
    let _v17: [i32; 4] = *c;
    let _v18: i32 = 1;
    let _v19: i32 = _v17[(_v18 as usize)];
    let _v20: [i32; 4] = *d;
    let _v21: i32 = 0;
    let _v22: i32 = _v20[(_v21 as usize)];
    let _v23: i32 = unsafe { printf(_v13 as *const i8, _v16, _v19, _v22) };
    let _v24: i32 = 0;
    __retval = _v24;
    let _v25: i32 = __retval;
    std::process::exit(_v25 as i32);
}
